modified aero and added MnP

--- a/home/clubs/aeromodellingClub/events.html
+++ b/home/clubs/aeromodellingClub/events.html
@@ -154,11 +154,11 @@
 							<hr style="margin-top:4px; margin-bottom:4px">
                              <a href="events.html" style="padding-left:15%"> Events</a>
 							<hr style="margin-top:4px; margin-bottom:4px">
-                             <a href="#" style="padding-left:15%"> Team</a>
+                             <a href="team.html" style="padding-left:15%"> Team</a>
 							<hr style="margin-top:4px; margin-bottom:4px">
-							 <a href="#" style="padding-left:15%"> RC Planes</a>
+			     <a href="rcPlanes.html" style="padding-left:15%"> RC Planes</a>
 							<hr style="margin-top:4px; margin-bottom:4px">
-							 <a href="#" style="padding-left:15%"> Gallery</a>
+			     <a href="gallery.html" style="padding-left:15%"> Gallery</a>
 							<hr style="margin-top:4px; margin-bottom:4px">
                         
                     </div><!--end sidebar widget-->
