initiated making about pages

--- a/home/clubs/aeromodellingClub/events.html
+++ b/home/clubs/aeromodellingClub/events.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/ionicons/css/ionicons.min.css" rel="stylesheet">    
-		<link href="events/css/style.css" rel="stylesheet">		
+		<link href="assets/css/style.css" rel="stylesheet">		
         <link href="assets/bower_components/flexslider/flexslider.css" rel="stylesheet">
         <link rel='stylesheet' type="text/css" href="assets/dzsparallaxer/dzsparallaxer.css"/>
         <!--main css file-->
@@ -195,7 +195,7 @@
 									<p>Find content and photographs <a href="https://drive.google.com/open?id=0B9-fEq0JwBbZZkxVdnlhODdIUkE" target="_blank">HERE</a></p>										</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/6.jpg" alt="" width=100%/>
+									<img src="assets/images/6.jpg" alt="" width=100%/>
 									</div>
  
 								</div>
@@ -212,7 +212,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/5.jpg" alt="" width=100%/>
+									<img src="assets/images/5.jpg" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -229,7 +229,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/0.png" alt="" width=100%/>
+									<img src="assets/images/0.png" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -246,7 +246,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/4.png" alt="" width=100%/>
+									<img src="assets/images/4.png" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -263,7 +263,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/0.png" alt="" width=100%/>
+									<img src="assets/images/0.png" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -279,7 +279,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/3.jpg" alt="" width=100%/>
+									<img src="assets/images/3.jpg" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -296,7 +296,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/0.png" alt="" width=100%/>
+									<img src="assets/images/0.png" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -312,7 +312,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/0.png" alt="" width=100%/>
+									<img src="assets/images/0.png" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -329,7 +329,7 @@
 									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/2.jpg" alt="" width=100%/>
+									<img src="assets/images/2.jpg" alt="" width=100%/>
 									</div>
 
 								</div>
@@ -345,7 +345,7 @@
 									<p>Find content and photographs <a href="https://drive.google.com/folderview?id=0B6O2Wm9zQDSCekdUQzFlMnl6R2c&usp=sharing" target="_blank">HERE</a></p>									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="events/images/1.jpg" alt="" width=100%/>
+									<img src="assets/images/1.jpg" alt="" width=100%/>
 									</div>
 								</div>
 								<div class="space-10"></div>	
@@ -360,7 +360,7 @@
 									<p>Find content and photographs <a href="{LINK OF THE IMAGES}" target="_blank">HERE</a></p>									</div>
 									<div class="imagegame">
 									<div class="space-20"></div>
-									<img src="LINK TO IMAGE or events/images/0.png" alt="" width=100%/>
+									<img src="LINK TO IMAGE or assets/images/0.png" alt="" width=100%/>
 									</div>
 								</div>
 								<div class="space-10"></div>	
@@ -387,7 +387,7 @@
                     <div class="col-md-3 margin-b-30">
                         <div class="margin-b-20">
                             <a href="#">
-                                <img src="assets/images/logo-light.png" alt="">
+                                <img src="../../Misc/assets/images/logo-light.png" alt="">
                             </a> 
                         </div>
                         <p>
