made some changes to team page

--- a/home/about/team2017-18.html
+++ b/home/about/team2017-18.html
@@ -62,8 +62,8 @@
                <span class="icon-bar"></span>
                </button>
                <a class="navbar-brand" href="index.html">
-               <img src="assets/images/logo-light.png" alt="" class="logo-default">
-               <img src="assets/images/logo.png" alt="" class="logo-scroll">
+               <img src="../../Misc/assets/images/logo-light.png" alt="" class="logo-default">
+               <img src="../../Misc/assets/images/logo.png" alt="" class="logo-scroll">
                </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -138,7 +138,7 @@
       <div class="ms-fullscreen-template" id="slider1-wrapper">
          <!-- masterslider -->
          <div class="dzsparallaxer auto-init" data-options='{   direction: "reverse"}' style="height: 450px;">
-            <div class="divimage dzsparallaxer--target " style="width: 101%; height: 600px; background-image: url(assets/images/bg3.png)">
+            <div class="divimage dzsparallaxer--target " style="width: 101%; height: 600px; background-image: url(../../Misc/assets/images/bg3.png)">
             </div>
             <div class=" parallax-text center-it page-title text-center">
                <h1 class="text-uppercase" style="font-size:6vh;">Team @<br><br>2017-18</h1>
